--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,42 @@
 h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color:blanchedalmond;
+    color:red;
+    text-align: center;
+}
+h2 {
+    color: red;
+    text-align: center;
 }
 body {
-    background-color: black
+    background: linear-gradient(-45deg, #aacd69, #e73c7e, #23a6d5, #32094c);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 p {
     color:aliceblue;
     text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 img {
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+a {
+    font-size: 25px;
+    color:#e73c7e;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
